# python-agents

./: README.md  pyproject.toml
docs/: getting-started.md  technical-internals.md
examples/agents-frontend/: README.md
examples/agents-frontend/src/: App.tsx
examples/agents-frontend/workers/: agents_bridge.mjs  index.py
examples/counter/frontend/: App.tsx
examples/counter/worker/: wrangler.toml
examples/counter/worker/src/: index.py
examples/counter_agent/src/: agent-bridge.js  frontend.tsx  worker.py
src/cloudflare_python_agents/: __init__.py  _compat.py  agent.py
src/js/: python-agents-bridge.mjs
src/python_agents/: __init__.py  _ffi.py  agent.py  apis.py  bridge.py  conversion.py  routing.py  tools.py
src/python_agents/worker/: agents_bridge.mjs
tests/: test_agent.py
