[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "python-agents"
version = "0.1.0"
description = "Python-first Cloudflare Agents SDK wrapper for Workers"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "python-agents maintainers" }]
keywords = ["cloudflare", "agents", "workers", "ai", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cloudflare/python-agents"
Documentation = "https://github.com/cloudflare/python-agents#readme"
Repository = "https://github.com/cloudflare/python-agents"
Issues = "https://github.com/cloudflare/python-agents/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["src"]
